[gd_scene load_steps=14 format=3 uid="uid://chok6a1xbmvrw"]

[ext_resource type="Script" uid="uid://bajpto7nlvb7k" path="res://Scripts/ui.gd" id="1_r1ou7"]
[ext_resource type="Resource" uid="uid://bkvlsjv23wvm8" path="res://Assets/WheelOptions/EncounterOptions.tres" id="2_smcll"]
[ext_resource type="Texture2D" uid="uid://rauxnxys3lqv" path="res://Assets/textures/Reactions/Admire.png" id="3_2246s"]
[ext_resource type="PackedScene" uid="uid://ynmfrkjnnm6r" path="res://wheel.tscn" id="3_lyknk"]
[ext_resource type="Texture2D" uid="uid://757ifqt67wy1" path="res://Assets/textures/monitor.png" id="4_mmixe"]
[ext_resource type="Texture2D" uid="uid://dg8y4rlqy60cb" path="res://Assets/textures/Reactions/joke.png" id="4_q7pk6"]
[ext_resource type="Texture2D" uid="uid://ussf1qeqe6al" path="res://Assets/textures/Reactions/bribe.png" id="5_m78vo"]
[ext_resource type="Texture2D" uid="uid://cdxo4a6a62e3j" path="res://Assets/textures/Reactions/ignore.png" id="6_smcll"]
[ext_resource type="Script" uid="uid://bw6nwu2gsv3sv" path="res://Scripts/popup_text.gd" id="8_ryf15"]
[ext_resource type="Texture2D" uid="uid://nghsm0c17e8e" path="res://Assets/textures/rotate_icon.png" id="10_nt8jn"]
[ext_resource type="PackedScene" uid="uid://gdy0gknyfm1y" path="res://Scenes/ScreenPanel.tscn" id="11_g0wmg"]

[sub_resource type="InputEventKey" id="InputEventKey_nt8jn"]
device = -1
keycode = 4194306

[sub_resource type="Shortcut" id="Shortcut_g0wmg"]
events = [SubResource("InputEventKey_nt8jn")]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_r1ou7")
WheelOptions = ExtResource("2_smcll")
ScoreForBadRound = -4

[node name="Wheel" parent="." instance=ExtResource("3_lyknk")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -364.0
offset_top = 40.0
offset_right = -64.0
offset_bottom = 340.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="SelectedOption" type="NinePatchRect" parent="Wheel"]
layout_mode = 0
offset_left = 64.0
offset_top = 361.0
offset_right = 238.0
offset_bottom = 424.0
texture = ExtResource("4_mmixe")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="SelectedOptionText" type="RichTextLabel" parent="Wheel/SelectedOption"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 170.0
offset_bottom = 59.0
bbcode_enabled = true
text = "IGNORE"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpImage" type="TextureRect" parent="Wheel"]
z_index = -1
layout_mode = 0
offset_left = 120.0
offset_top = -40.0
offset_right = 184.0
offset_bottom = 24.0
texture = ExtResource("3_2246s")

[node name="RightImage" type="TextureRect" parent="Wheel"]
z_index = -1
layout_mode = 0
offset_left = 280.0
offset_top = 119.0
offset_right = 344.0
offset_bottom = 183.0
texture = ExtResource("4_q7pk6")

[node name="DownImage" type="TextureRect" parent="Wheel"]
z_index = -1
layout_mode = 0
offset_left = 125.0
offset_top = 283.0
offset_right = 189.0
offset_bottom = 347.0
texture = ExtResource("5_m78vo")

[node name="LeftImage" type="TextureRect" parent="Wheel"]
z_index = -1
layout_mode = 0
offset_left = -43.0
offset_top = 118.0
offset_right = 21.0
offset_bottom = 182.0
texture = ExtResource("6_smcll")

[node name="Debug" type="Control" parent="Wheel"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TotalValue" type="RichTextLabel" parent="Wheel/Debug"]
layout_mode = 0
offset_left = 223.0
offset_top = -9.0
offset_right = 325.0
offset_bottom = 39.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseScore" type="RichTextLabel" parent="Wheel/Debug"]
layout_mode = 0
offset_left = 199.0
offset_top = 553.0
offset_right = 301.0
offset_bottom = 601.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseMultiplier" type="RichTextLabel" parent="Wheel/Debug"]
layout_mode = 0
offset_left = 193.0
offset_top = 504.0
offset_right = 295.0
offset_bottom = 552.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseMultiplier2" type="RichTextLabel" parent="Wheel/Debug"]
layout_mode = 0
offset_left = 84.0
offset_top = 507.0
offset_right = 186.0
offset_bottom = 555.0
text = "mult"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseMultiplier3" type="RichTextLabel" parent="Wheel/Debug"]
layout_mode = 0
offset_left = 93.0
offset_top = 555.0
offset_right = 195.0
offset_bottom = 603.0
text = "slice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Wheel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RoundReaction" type="RichTextLabel" parent="Wheel/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 96.0
offset_bottom = 48.0
bbcode_enabled = true
text = "[wave][color=#63c74d]NICE!"
fit_content = true
autowrap_mode = 0
script = ExtResource("8_ryf15")
seconds_to_full_display = 0.3
seconds_to_vanish = 1.2
default_text = "[wave][color=#63c74d]NICE!"

[node name="FreeRotateButton" type="Button" parent="Wheel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -50.0
offset_top = 288.0
offset_right = 60.0
offset_bottom = 344.0
tooltip_text = "Free rotate"
shortcut = SubResource("Shortcut_g0wmg")
text = "3"
icon = ExtResource("10_nt8jn")
icon_alignment = 2
expand_icon = true

[node name="NinePatchRect" parent="Wheel" instance=ExtResource("11_g0wmg")]
layout_mode = 0
offset_left = 48.0
offset_top = 427.0
offset_right = 267.0
offset_bottom = 482.0

[node name="MarginContainer" type="MarginContainer" parent="Wheel/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_right = 53.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Wheel/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="AttemptLabel" type="RichTextLabel" parent="Wheel/NinePatchRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(197.2, 0)
layout_mode = 2
text = "Rounds: "
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="AttemptCountLabel" type="RichTextLabel" parent="Wheel/NinePatchRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(61, 0)
layout_mode = 2
text = "0"
fit_content = true
vertical_alignment = 1

[connection signal="pressed" from="Wheel/FreeRotateButton" to="." method="_on_free_rotate_button_pressed"]
